--- a/BugTrackerUI/_Imports.razor
+++ b/BugTrackerUI/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using BugTrackerUI
 @using BugTrackerUI.Shared
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 
