fix incorrect interface name, change method createbug to reportbug, everything is working right

--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager navManager
 @inject ProtectedSessionStorage sessionStorage
 
-<h1>Training Bug</h1>
+<h1>Bug Reports</h1>
 <div>
     <button>Report</button>
 </div>
