--- a/BugTrackerUI/Pages/SampleData.razor
+++ b/BugTrackerUI/Pages/SampleData.razor
@@ -58,7 +58,7 @@ else
               Bug = "Undo function doesn't always work",
               Description = "The undo function only works after I reload the page."
          };
-         await bugData.CreateBug(bug);
+         await bugData.ReportBug(bug);
 
          bug = new()
          {
@@ -69,7 +69,7 @@ else
               BugStatus = statuses[0],
               OwnerNotes = "This is the note for the status"
          };
-         await bugData.CreateBug(bug);
+         await bugData.ReportBug(bug);
 
          bug = new()
          {
@@ -80,7 +80,7 @@ else
               BugStatus = statuses[1],
               OwnerNotes = "This is the note for the status"
          };
-         await bugData.CreateBug(bug);
+         await bugData.ReportBug(bug);
 
          bug = new()
          {
@@ -92,7 +92,7 @@ else
               UserVotes = votes,
               OwnerNotes = "This is the note for the status"
          };
-         await bugData.CreateBug(bug);
+         await bugData.ReportBug(bug);
 
          votes.Add("4");
 
@@ -106,7 +106,7 @@ else
               UserVotes = votes,
               OwnerNotes = "This is the note for the status"
          };
-         await bugData.CreateBug(bug);
+         await bugData.ReportBug(bug);
     }
 
     private async Task CreateCategories()
