--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -133,7 +133,7 @@
 
     private async Task FilterBugs()
     {
-         var output = await bugData.GetAllApprovedBugs();
+         var output = await bugData.GetAllAcceptedBugs();
 
          if (selectedCategory != "All")
          {
